# OpenMP_Benchmark

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  laplace2d.cpp  pi_value.cpp  saxpy.cpp
cmake/modules/: AddGBenchmark.cmake  AddGTest.cmake
